...
                                        <connections>
                                            <action selector="drinkButtonPressed:" destination="9pv-A4-QxB" eventType="touchUpInside" id="hxY-zp-OTi"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X5l-5H-zNG">
                                        <rect key="frame" x="0.0" y="46" width="248" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Start new drink session" label="start"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                        <state key="normal" title="Button"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                <real key="value" value="1"/>
...
                                        <connections>
                                            <action selector="newSessionPressed:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Vrm-w9-9M1"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oOf-Zy-N5W">
                                        <rect key="frame" x="0.0" y="92" width="248" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="end"/>
                                        <state key="normal" title="Button">
                                            <color key="titleColor" red="1" green="0.045474315420000001" blue="0.12323122760000001" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                <real key="value" value="1"/>
...
                                    </view>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mZd-yr-8G7">
                                        <rect key="frame" x="0.0" y="374" width="272" height="30"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="meh-J2-1pa">
                                                <rect key="frame" x="0.0" y="0.0" width="131" height="30"/>
                                                <accessibility key="accessibilityConfiguration" label="cancel"/>
                                                <state key="normal" title="Cancel">
                                                    <color key="titleColor" red="1" green="0.045474315420000001" blue="0.12323122760000001" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                        <color key="value" red="1" green="0.045474315420000001" blue="0.12323122760000001" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <connections>
                                                    <action selector="cancelButtonPressed:" destination="Kza-wV-z4y" eventType="touchUpInside" id="j6t-aG-B6N"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oLd-7R-VkW">
                                                <rect key="frame" x="141" y="0.0" width="131" height="30"/>
                                                <accessibility key="accessibilityConfiguration" label="done"/>
                                                <state key="normal" title="Done"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                                        <color key="value" red="0.21145932310000001" green="0.47767158770000001" blue="0.91522648360000003" alpha="1" colorSpace="calibratedRGB"/>
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
...
